fixed decode api
