# api/openapi.yaml
@@ -916,6 +916,13 @@ paths:
           format: uuid
           type: string
         style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AudioReferenceWithCallbackObject'
+        description: Audio that needs to be decoded
+        required: true
       responses:
         202:
           content:
@@ -1887,6 +1894,22 @@ components:
           example: 550e8400-e29b-11d4-a716-446655440000
           format: uuid
           type: string
+      required:
+      - audio_uuid
+      type: object
+    AudioReferenceWithCallbackObject:
+      example:
+        audio_uuid: 550e8400-e29b-11d4-a716-446655440000
+        callback: 'https://my-ci.example.org/callback'
+      properties:
+        audio_uuid:
+          description: UUID of the audio file
+          example: 550e8400-e29b-11d4-a716-446655440000
+          format: uuid
+          type: string
+        callback:
+          type: string
+          description: Callback URL when decoding finished
       required:
       - audio_uuid
       type: object
